# fake_word2vec

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/w2v/: util.h
src/: main.cpp
src/w2v/: util.cpp
